Fixed spacing

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ body {
   color: var(--clr-fg);
   background-color: var(--clr-bg);
 
+  overflow-x: hidden;
+
+
 
   --clr-bg: #2e3047;
   --clr-bg-alt: #3c3f58;
@@ -84,7 +87,7 @@ button {
   cursor: pointer;
 }
 
-@media (max-width: 900px) {
+@media (max-width: 1440px) {
   h1 {
     font-size: 2.6rem;
   }
@@ -573,6 +576,10 @@ p {
     display: none;
   }
 
+  .nav {
+    display: none;
+  }
+
 
   .nav__hamburger {
     display: none;
@@ -639,25 +646,24 @@ p {
 
   .timeline-item {
     position: relative;
-    width: 106%;
+    width: 107%;
     text-align: left;
     margin-left: 0em;
-    margin-right: 0em;
+    margin-right: 2em;
   }
 
   .timeline-item.right {
     position: relative;
-    width: 106%;
+    width: 107%;
     left: -5.75em;
     text-align: left;
-
     margin-left: 2em;
-    margin-right: 0em;
+    margin-right: 2em;
   }
 
   .timeline-content {
     background-color: var(--clr-bg-alt);
-    padding: 30px;
+
     border-left: 4px solid var(--clr-fg-alt);
     position: relative;
     box-shadow: var(--shadow);
